# wifi-room-radar

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROJECT_REPORT.md
examples/: demo_preview.py
scripts/: calibrate.py  check_accuracy.py  mqtt_bridge.py  record_csi.py  run_dashboard.py  run_headless.py
tests/: test_alerts_activity.py  test_detection_vitals.py  test_mapping_tracking.py  test_multistatic.py  test_pipeline.py  test_processing.py  test_server.py  test_simulator.py
wifi_room_radar/: __init__.py  config.py  pipeline.py  scenarios.py  server.py  types.py
wifi_room_radar/capture/: __init__.py  base.py  hardware.py  replay.py  simulator.py
wifi_room_radar/dashboard/: app.js  index.html  style.css
wifi_room_radar/detection/: __init__.py  activity.py  alerts.py  motion.py  presence.py
wifi_room_radar/mapping/: __init__.py  room_mapper.py
wifi_room_radar/processing/: __init__.py  filters.py  preprocessing.py  spectrogram.py
wifi_room_radar/tracking/: __init__.py  tracker.py
wifi_room_radar/vitals/: __init__.py  breathing.py  heartbeat.py  subvocal.py
